@@ -1,3 +1,7 @@
+2011-07-13  Jeremy Cribb <jcribb@email.unc.edu>
+	* filter_video_tracking.m:  added more standardized message logging.
+	* SetFPSandMinFrames.m: now uses 'save_evtfile' function.  added more standardized message logging.
+
 2011-07-01  Jeremy Cribb <jcribb@email.unc.edu>
 	* load_video_tracking.m:  removed code for filtering tracking data.
 	* filter_video_tracking.m:  added.  new function responsible for filtering tracking data.
